--- a/docker-compose-infra-lite.yml
+++ b/docker-compose-infra-lite.yml
@@ -1,12 +1,33 @@
 version: '3'
 services:
+  postgres:
+    image: "postgres:latest"
+    container_name: postgres
+    hostname: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./db-init.sql:/docker-entrypoint-initdb.d/db-init.sql
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+    healthcheck:
+      test: "pg_isready -h localhost -p 5432 -q -U postgres"
+      interval: 2s
+      timeout: 5s
+      retries: 10
+    ports:
+      - "5432:5432"
   hiu-db-setup:
-    image: projecteka/hiu-db-initializer
+    image: projecteka/dockerhiu-db-initializer
     container_name: hiu-db-setup
     environment:
       - 'JAVA_TOOL_OPTIONS=-Djdbc.url=jdbc:postgresql://postgres:5432/health_information_user -Djdbc.username=postgres -Djdbc.password=password'
     depends_on:
       - postgres
+  rabbitmq:
+    image: "rabbitmq:3"
+    ports:
+      - "5672:5672"
 
   orthanc:
     image: jodogne/orthanc-plugins
