BAH-1728| Moved some secrets to configs in values.yaml

--- a/package/helm/templates/configMap.yaml
+++ b/package/helm/templates/configMap.yaml
@@ -29,3 +29,7 @@ data:
   DATA_FLOW_CONSENT_REQUEST_WAIT_TIME: "{{ .Values.config.DATA_FLOW_CONSENT_REQUEST_WAIT_TIME }}"
   DATA_FLOW_CONSENT_ARTEFACT_WAIT_TIME: "{{ .Values.config.DATA_FLOW_CONSENT_ARTEFACT_WAIT_TIME }}"
   DATA_FLOW_PART_WAIT_TIME: "{{ .Values.config.DATA_FLOW_PART_WAIT_TIME }}"
+  POSTGRES_USER: "{{ .Values.config.POSTGRES_USER }}"
+  POSTGRES_PASSWORD: "{{ .Values.config.POSTGRES_PASSWORD }}"
+  RABBITMQ_USERNAME: "{{ .Values.config.RABBITMQ_USERNAME }}"
+  RABBITMQ_PASSWORD: "{{ .Values.config.RABBITMQ_PASSWORD }}"
