--- a/package/helm/values.yaml
+++ b/package/helm/values.yaml
@@ -24,7 +24,7 @@ config:
   DEFAULT_PAGE_SIZE: 20
   MAX_PAGE_SIZE: 100
   LOCAL_STORAGE_PATH: "/tmp/"
-  POSTGRES_HOST: db
+  POSTGRES_HOST: bahmni-dev-postgresql
   POSTGRES_PORT: 5432
   CONSENT_MANAGER_DB_NAME: "health_information_user"
   DB_CONNECTION_POOL_SIZE: 5
@@ -34,7 +34,7 @@ config:
   GATEWAY_REQUEST_TIMEOUT: 2000
   GATEWAY_JWK_URL: "https://dev.abdm.gov.in/gateway/v0.5/certs"
   HFR_AFFINITY_DOMAINS: "facilitysbx.ndhm.gov.in"
-  RABBITMQ_HOST: rabbitmq
+  RABBITMQ_HOST: bahmni-dev-rabbitmq
   RABBITMQ_PORT: 5672
   MAX_IN_MEMORY_SIZE: 500MB
   DATA_FLOW_CONSENT_REQUEST_WAIT_TIME: 1
@@ -42,8 +42,8 @@ config:
   DATA_FLOW_PART_WAIT_TIME: 1440
   POSTGRES_USER: "postgres"
   POSTGRES_PASSWORD: "welcome"
-  RABBITMQ_USERNAME: "guest"
-  RABBITMQ_PASSWORD: "guest"
+  RABBITMQ_USERNAME: "bahmni"
+  RABBITMQ_PASSWORD: "bahmni"
 
 secrets:
   HIU_CLIENT_ID: ""
