--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation 'io.lettuce:lettuce-core:5.3.2.RELEASE'
     implementation 'org.springframework.data:spring-data-redis:2.7.15'
     implementation 'net.logstash.logback:logstash-logback-encoder:6.4'
+    implementation 'org.yaml:snakeyaml:2.0'
+    implementation 'com.squareup.okio:okio:3.4.0'
 }
 
 test {
